--- a/WcfClientConsole/App.config
+++ b/WcfClientConsole/App.config
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+	</startup>
+	<system.serviceModel>
+		<client>
+			<endpoint
+				name="tcp"
+				address="net.tcp://localhost:9002/TimeCalculatorService"
+				binding ="netTcpBinding"
+				contract ="MyServiceApp.Services.ITimeCalculator"
+					  />
+			<endpoint
+				name="http"
+				address="http://localhost:9001/TimeCalculatorService"
+				binding ="basicHttpBinding"
+				contract ="MyServiceApp.Services.ITimeCalculator"
+				/>
+		</client>
+	</system.serviceModel>
 </configuration>
