--- a/WcfHostConsole/App.config
+++ b/WcfHostConsole/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+	</startup>
+	<system.serviceModel>
+		<services>
+			<service name="MyServiceApp.Services.TimeCalculatorService" behaviorConfiguration="app-default-behavior">
+				<host>
+					<baseAddresses>
+						<add baseAddress="http://localhost:9001/TimeCalculatorService"/>
+						<add baseAddress="net.tcp://localhost:9002/TimeCalculatorService"/>
+					</baseAddresses>
+				</host>
+				<endpoint address="http://localhost:9001/TimeCalculatorService" binding="basicHttpBinding" contract="MyServiceApp.Services.ITimeCalculator"/>
+				<endpoint address="net.tcp://localhost:9002/TimeCalculatorService" binding="netTcpBinding" contract="MyServiceApp.Services.ITimeCalculator"/>
+				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+				<endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
+			</service>
+		</services>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior name="app-default-behavior">
+					<serviceMetadata httpGetEnabled="true"/>
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+	</system.serviceModel>
+
 </configuration>
