--- a/WcfHostConsole/WcfHostConsole.csproj
+++ b/WcfHostConsole/WcfHostConsole.csproj
@@ -21,6 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,7 +49,19 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyServiceApp.ServiceContracts\MyServiceApp.ServiceContracts.csproj">
+      <Project>{febbb25e-ab33-4330-b1b9-cafb2eb933b5}</Project>
+      <Name>MyServiceApp.ServiceContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyServiceApp.ServicesImplementations\MyServiceApp.ServicesImplementations.csproj">
+      <Project>{FC9810FC-71E7-4813-936D-7A44CA792B12}</Project>
+      <Name>MyServiceApp.ServicesImplementations</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
