--- a/MyServiceApp.ServicesImplementations/MyServiceApp.ServicesImplementations.csproj
+++ b/MyServiceApp.ServicesImplementations/MyServiceApp.ServicesImplementations.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DCC7E003-D619-4206-AEB8-2D7403E40319}</ProjectGuid>
+    <ProjectGuid>{FC9810FC-71E7-4813-936D-7A44CA792B12}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceContracts</RootNamespace>
-    <AssemblyName>ServiceContracts</AssemblyName>
+    <RootNamespace>MyServiceApp</RootNamespace>
+    <AssemblyName>MyServiceApp.ServicesImplementations</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,6 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,6 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TimeCalculatorService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyServiceApp.ServiceContracts\MyServiceApp.ServiceContracts.csproj">
+      <Project>{febbb25e-ab33-4330-b1b9-cafb2eb933b5}</Project>
+      <Name>MyServiceApp.ServiceContracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
